--- a/.github/workflows/gha2-telegrambots.yml
+++ b/.github/workflows/gha2-telegrambots.yml
@@ -2,31 +2,29 @@ name: placeholder_Name
 
 on:
   pull_request:
-    branches: branch-name
+    branches: 
+      - branch-name
   push:
     branches:
-    - branch-2
+      - branch-2
 
 jobs:
   build:
     strategy:
       matrix:
-        java:
-          19-ea
-          18-ea
+        java: [ '19-ea', '18-ea' ]
     runs-on: ubuntu-latest
+    
     steps:
-      with:
-        bundler-cache: TRUE
-        configuration-cache-enabled: FALSE
+    - uses: actions/checkout@v2
+    
+    - name: Set up JDK
+      uses: actions/setup-java@v2
       with:
         java-version: ${{ matrix.java }}
-      uses: actions/setup-java@version
-      uses: actions/checkout@version
+        distribution: 'temurin' 
+   
+    - name: Build with Maven
+      run: mvn -q clean compile test
       env:
-        github_token: ${{ github.token }}
-    - name: build with maven-
-      run:
-        bash <(curl -s https://codecov.io/bash)
-        mvn -q clean compile test
-
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
